--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -6,19 +6,14 @@ weight = 1
 rtl = false
 
 title = "HQBW"
-logo = "img/blowfish_logo_transparent.png"
+logo = "img/btc-scan.jpeg"
 description = "A powerful, lightweight theme for Hugo built with Tailwind CSS."
 # copyright = "Copy, _right?_ :thinking_face:"
 
 dateFormat = "2 January 2006"
 
 [author]
-  name = "Mike"
+  name = "Mike Dimitrov"
   image = "static/apple-touch-icon.png"
-  headline = "You have exactly 3 seconds to stare at this page..."
-  bio = "A powerful, lightweight theme for Hugo built with Tailwind CSS."
-  links = [
-    { twitter = "https://twitter.com/HQBW" },
-  #  { mastodon = "https://masto.ai/@blowfish" },
-    { github = "https://github.com/mike776" },
-  ]
+  headline = "HQ Bitcoin Wallet"
+  bio = ""
