--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,7 +9,7 @@ colorScheme = "blowfish"
 defaultAppearance = "dark" # valid options: light or dark
 autoSwitchAppearance = true
 
-enableSearch = true
+enableSearch = false
 enableCodeCopy = true
 
 mainSections = [""]
@@ -17,7 +17,7 @@ mainSections = [""]
 
 disableImageOptimization = false
 
-defaultBackgroundImage = "/img/bg.jpg"
+defaultBackgroundImage = "/img/btc-scan.jpeg"
 
 highlightCurrentMenuArea = true
 smartTOC = true
@@ -29,9 +29,9 @@ smartTOCHideUnfocusedChildren = true
 [footer]
   showMenu = true
   showCopyright = true
-  showThemeAttribution = true
+  showThemeAttribution = false
   showAppearanceSwitcher = true
-  showScrollToTop = true
+  showScrollToTop = false
 
 [homepage]
   layout = "hero" # valid options: page, profile, hero, card, background, custom
