--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -15,7 +15,7 @@ summaryLength = 30
 buildDrafts = false
 buildFuture = true
 
-googleAnalytics = ""
+googleAnalytics = "G-DH1FBQ7ENT"
 
 [imaging]
   anchor = 'Center'
